...      midnight-dev playing Black: 61 - 26 - 44  [0.634] 131
...      White vs Black: 90 - 89 - 83  [0.502] 262
Elo difference: 96.6 +/- 35.6, LOS: 100.0 %, DrawRatio: 31.7 %
SPRT: llr 2.96 (100.5%), lbound -2.94, ubound 2.94 - H1 was accepted

Transposition Table in QSearch
Score of midnight-dev vs midnight-latest: 337 - 265 - 496  [0.533] 1098
...      midnight-dev playing White: 189 - 127 - 233  [0.556] 549
...      midnight-dev playing Black: 148 - 138 - 263  [0.509] 549
...      White vs Black: 327 - 275 - 496  [0.524] 1098
Elo difference: 22.8 +/- 15.2, LOS: 99.8 %, DrawRatio: 45.2 %
SPRT: llr 2.96 (100.7%), lbound -2.94, ubound 2.94 - H1 was accepted

Improve Time Managment
Score of midnight-dev vs midnight-latest: 148 - 89 - 223  [0.564] 460
...      midnight-dev playing White: 80 - 41 - 109  [0.585] 230
...      midnight-dev playing Black: 68 - 48 - 114  [0.543] 230
...      White vs Black: 128 - 109 - 223  [0.521] 460
Elo difference: 44.8 +/- 22.8, LOS: 100.0 %, DrawRatio: 48.5 %
SPRT: llr 2.99 (101.6%), lbound -2.94, ubound 2.94 - H1 was accepted

Doubled Pawns
Score of midnight-dev vs midnight-latest: 2772 - 2589 - 4423  [0.509] 9784
...      midnight-dev playing White: 1453 - 1179 - 2261  [0.528] 4893
...      midnight-dev playing Black: 1319 - 1410 - 2162  [0.491] 4891
...      White vs Black: 2863 - 2498 - 4423  [0.519] 9784
Elo difference: 6.5 +/- 5.1, LOS: 99.4 %, DrawRatio: 45.2 %
SPRT: llr 2.96 (100.5%), lbound -2.94, ubound 2.94 - H1 was accepted

Antares makes my LMR a lot better
Score of midnight-dev vs midnight-latest: 93 - 39 - 123  [0.606] 255
...      midnight-dev playing White: 50 - 18 - 60  [0.625] 128
...      midnight-dev playing Black: 43 - 21 - 63  [0.587] 127
...      White vs Black: 71 - 61 - 123  [0.520] 255
Elo difference: 74.7 +/- 30.7, LOS: 100.0 %, DrawRatio: 48.2 %
SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted

New Changelog Tests are initially tested on 2+0.02 and then 5+0.05